[gd_scene load_steps=3 format=3 uid="uid://dwruebh0uj8od"]

[ext_resource type="Script" path="res://game/banner/button_back/top_banner.gd" id="1_nroay"]
[ext_resource type="PackedScene" uid="uid://d37udi1xyijnq" path="res://game/banner/button_back/disp_icons.tscn" id="2_qhhpq"]

[node name="top_banner" type="HBoxContainer"]
offset_right = 403.0
offset_bottom = 31.0
size_flags_stretch_ratio = 10.0
script = ExtResource("1_nroay")
disp = ExtResource("2_qhhpq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "  V  "

[node name="Control" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer2"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.662668, 0.199479, 0, 1)

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "00"

[node name="ColorRect2" type="ColorRect" parent="HBoxContainer2"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.408329, 0.408329, 0.408329, 1)

[node name="Label2" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "00"

[node name="ColorRect3" type="ColorRect" parent="HBoxContainer2"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.662745, 0.533333, 0, 1)

[node name="Label3" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "00"

[node name="PopupPanel" type="PopupPanel" parent="."]
position = Vector2i(0, 25)

[node name="ScrollContainer" type="ScrollContainer" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/ScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
